fix(ci): fix java 8 map compilation error, opt-in to node 24 runner, and update book link